# gaiku

./: .gitignore  Cargo.toml  LICENSE  Readme.md  rustfmt.toml
.cargo/: config.toml
.github/workflows/: bench.yml  rust.yml  style.yml
benches/: heightmap.rs  marching_cubes.rs  mesh_builders.rs  modified_marching_cubes.rs  voxel.rs
benches/benchmarks/: heightmap.rs  marching_cubes.rs  mod.rs  voxel.rs
crates/gaiku-3d/: Cargo.toml  Readme.md
crates/gaiku-baker-voxel/: Cargo.toml
crates/gaiku-baker-voxel/src/: lib.rs
crates/gaiku-bevy/: Cargo.toml
crates/gaiku-bevy/assets/: planet.gox  terrain.gox
crates/gaiku-bevy/examples/: gox_loader.rs  main.rs
crates/gaiku-bevy/examples/common/: mod.rs
crates/gaiku-bevy/examples/plugins/: mod.rs
crates/gaiku-bevy/src/: plugins.rs
crates/gaiku-bevy/src/plugins/: camera.rs  control.rs  loaders.rs
crates/gaiku-bevy/src/plugins/camera/: arc_ball.rs  editor.rs  fly.rs
crates/gaiku-bevy/src/plugins/control/: displacement.rs  rotation.rs
crates/gaiku-bevy/src/plugins/loaders/: gox.rs
crates/gaiku-common/: Cargo.toml  Readme.md
crates/gaiku-common/src/: data.rs  lib.rs  tree.rs
crates/gaiku-common/src/data/: chunk.rs  mesh.rs
crates/gaiku-loader-gox/: Cargo.toml
crates/gaiku-loader-gox/src/: lib.rs
crates/gaiku_baker_heightmap/: Cargo.toml
crates/gaiku_baker_heightmap/src/: lib.rs
crates/gaiku_baker_marching_cubes/: Cargo.toml
crates/gaiku_baker_marching_cubes/src/: baker.rs  common.rs  lib.rs  table_gen.rs  tables.rs
crates/gaiku_baker_modified_marching_cubes/: Cargo.toml
crates/gaiku_baker_modified_marching_cubes/src/: baker.rs  common.rs  lib.rs  table_gen.rs  tables.rs
crates/gaiku_baker_voxel/: Cargo.toml
crates/gaiku_baker_voxel/src/: baker.rs  common.rs  lib.rs  table_gen.rs  tables.rs
crates/gaiku_common/: Cargo.toml
crates/gaiku_common/src/: atlas.rs  boundary.rs  chunk.rs  lib.rs  mesh.rs  texture.rs
crates/gaiku_common/src/chunk/: chunk.rs  sparse_chunk.rs
crates/gaiku_common/src/chunker/: common.rs  flat.rs  lod.rs  mod.rs
crates/gaiku_common/src/interpolators/: common.rs  mod.rs  nearestneighbour.rs  trilinear.rs
crates/gaiku_common/src/meshbuilder/: map.rs  meshbuilder.rs  mod.rs  notree.rs  octree.rs  rstar.rs
crates/gaiku_format_gox/: Cargo.toml
crates/gaiku_format_gox/src/: lib.rs
crates/gaiku_format_png/: Cargo.toml
crates/gaiku_format_png/src/: lib.rs
dev/bench/: data.js
examples/: heightmap.rs  marching_cubes.rs  texture.rs  voxel.rs
examples/assets/: small_tree.gox
examples/common/: exporter.rs  mod.rs
examples/output/: cube.gltf
gaiku-2d/: Cargo.toml  Readme.md
gaiku-2d/example/: Cargo.toml
gaiku-2d/example/src/: main.rs
gaiku-2d/src/: lib.rs
gaiku-3d/: Cargo.toml  Readme.md
gaiku-3d/benches/: main.rs
gaiku-3d/benches/benchmarks/: heightmap.rs  marching_cubes.rs  mod.rs  voxel.rs
gaiku-3d/example/: Cargo.toml
gaiku-3d/example/assets/: terrain.gox
gaiku-3d/example/src/: exporter.rs  main.rs  renderer.rs
gaiku-3d/examples/: heightmap.rs  marching_cubes.rs  texture.rs  voxel.rs
gaiku-3d/examples/common/: exporter.rs  mod.rs
gaiku-3d/examples/main/: exporter.rs  main.rs
gaiku-3d/src/: bakers.rs  formats.rs  lib.rs
gaiku-3d/src/bakers/: heightmap.rs  marching_cubes.rs  mod.rs  voxel.rs
gaiku-3d/src/bakers/marching_cubes/: mod.rs  tables.rs
gaiku-3d/src/bakers/voxel/: greedy_meshing.rs  linear.rs  mod.rs  pyramid.rs
gaiku-3d/src/formats/: gox.rs  mod.rs  png.rs
gaiku-amethyst/: Cargo.toml
gaiku-amethyst/examples/: terrain.rs
gaiku-amethyst/examples/assets/: display.ron
gaiku-amethyst/src/: lib.rs  mesher.rs
gaiku-bevy/: Cargo.toml
gaiku-bevy/examples/: terrain.rs
gaiku-bevy/src/: lib.rs  mesh.rs  plugin.rs  texture.rs
gaiku-common/: Cargo.toml  Readme.md
gaiku-common/src/: boundary.rs  boxify.rs  chunk.rs  data.rs  lib.rs  mesh.rs  prelude.rs  texture.rs  tree.rs
gaiku-common/src/chunk/: chunk.rs  sparse_chunk.rs
gaiku-common/src/data/: chunk.rs  mesh.rs  mod.rs  texture.rs  vector.rs
gaiku-common/src/tree/: mod.rs
integrations/gaiku_amethyst/: Cargo.toml  Readme.md
integrations/gaiku_amethyst/examples/: lod.rs  terrain.rs
integrations/gaiku_amethyst/examples/assets/: bindings.ron  display.ron  marching_text.gox  mod_marching_text.gox  voxel_text.gox
integrations/gaiku_amethyst/src/: lib.rs
integrations/gaiku_bevy/: Cargo.toml
integrations/gaiku_bevy/assets/: terrain.gox
integrations/gaiku_bevy/examples/: terrain.rs
integrations/gaiku_bevy/src/: lib.rs  plugin.rs
license/: APACHE  MIT
src/: lib.rs
src/bakers/: heightmap.rs  marching_cubes.rs  voxel.rs
src/formats/: gox.rs  png.rs
