[package]
name = "gaiku"
version = "0.1.0"
authors = ["Norman Paniagua <normanpaniagua@gmail.com>"]
edition = "2018"
description = "3d agnostic framework (game engine) terrain engine."
exclude = ["gaiku/examples/*"]
keywords = ["3d", "terrain", "engine", "gaiku"]
categories = ["game-engines"]

documentation = "https://docs.rs/gaiku"
homepage = "https://github.com/norman784/gaiku"
repository = "https://github.com/norman784/gaiku"

readme = "Readme.md"
license = "MIT"

[workspace]
members = [
  "plugins/*",
  "bakers/*",
  "loaders/*",
]

[features]
default = [
  "voxel", "gox",
]

# Mesh generation methods
voxel = ["gaiku-baker-voxel"]

# Loaders
gox = ["gaiku-loader-gox"]

[dependencies]
gaiku-common = { path = "crates/gaiku-common" }

# Optional
gaiku-baker-voxel = { path = "crates/gaiku-baker-voxel", optional = true }

gaiku-loader-gox = { path = "crates/gaiku-loader-gox", optional = true }

[dev-dependencies]
obj-exporter = "0.2.0"
