[package]
name = "gaiku"
version = "0.1.0"
authors = ["Norman Paniagua <normanpaniagua@gmail.com>"]
edition = "2018"
description = "3d agnostic framework (game engine) terrain engine."
exclude = ["gaiku-3d/examples/*"]
keywords = ["3d", "terrain", "engine", "gaiku"]
categories = ["game-engines"]

[features]
default = [
  "gaiku_baker_heightmap",
  "gaiku_baker_marching_cubes",
  "gaiku_baker_voxel",
  "gaiku_format_gox",
  "gaiku_format_png",
]

heightmap = ["gaiku_baker_heightmap"]
marching_cubes = ["gaiku_baker_marching_cubes"]
voxel = ["gaiku_baker_voxel"]

gox = ["gaiku_format_gox"]
png = ["gaiku_format_png"]

amethyst = ["gaiku_amethyst"]

[dependencies]
# Bakers
gaiku_baker_heightmap = { path = "crates/gaiku_baker_heightmap", version = "0.1.0", optional = true }
gaiku_baker_marching_cubes = { path = "crates/gaiku_baker_marching_cubes", version = "0.1.0", optional = true }
gaiku_baker_voxel = { path = "crates/gaiku_baker_voxel", version = "0.1.0", optional = true }

# File formats
gaiku_format_gox = { path = "crates/gaiku_format_gox", version = "0.1.0", optional = true }
gaiku_format_png = { path = "crates/gaiku_format_png", version = "0.1.0", optional = true }

# Game engines
gaiku_amethyst = { path = "integrations/gaiku_amethyst", version = "0.1.0", optional = true }

[workspace]

members = [
  "crates/*",
  "integrations/*",
]

[profile.release]
lto = true
