[package]
name = "gaiku"
version = "0.1.0"
authors = ["Norman Paniagua <normanpaniagua@gmail.com>"]
edition = "2018"
description = "3d agnostic framework (game engine) terrain engine."
exclude = ["examples/*", "integrations/*/examples/*"]
keywords = ["3d", "terrain", "engine", "gaiku"]
categories = ["game-engines"]
resolver = "2"

[features]
default = ["voxel"]

heightmap = ["gaiku_baker_heightmap"]
marching_cubes = ["gaiku_baker_marching_cubes", "gaiku_baker_modified_marching_cubes"]
voxel = ["gaiku_baker_voxel"]

gox = ["gaiku_format_gox"]
png = ["gaiku_format_png"]

export = ["gaiku_common/export"]
serialization = ["gaiku_common/serialization"]

[dependencies]
gaiku_common = { path = "crates/gaiku_common", version = "0.1.0" }
# Bakers
gaiku_baker_heightmap = { path = "crates/gaiku_baker_heightmap", version = "0.1.0", optional = true }
gaiku_baker_marching_cubes = { path = "crates/gaiku_baker_marching_cubes", version = "0.1.0", optional = true }
gaiku_baker_modified_marching_cubes = { path = "crates/gaiku_baker_modified_marching_cubes", version = "0.1.0", optional = true }
gaiku_baker_voxel = { path = "crates/gaiku_baker_voxel", version = "0.1.0", optional = true }

# File formats
gaiku_format_gox = { path = "crates/gaiku_format_gox", version = "0.1.0", optional = true }
gaiku_format_png = { path = "crates/gaiku_format_png", version = "0.1.0", optional = true }

[dev-dependencies]
criterion = "0.3.4"
obj-exporter = "0.2.0"

[workspace]

members = [
  "crates/*",
  "integrations/*",
]

[profile.release]
lto = true

[[bench]]
name = "heightmap"
harness = false
required-features = ["heightmap", "gox"]

[[bench]]
name = "marching_cubes"
harness = false
required-features = ["marching_cubes", "gox"]

[[bench]]
name = "modified_marching_cubes"
harness = false
required-features = ["marching_cubes", "gox"]

[[bench]]
name = "voxel"
harness = false
required-features = ["voxel", "gox"]

[[example]]
name = "heightmap"
required-features = ["heightmap", "gox"]

[[example]]
name = "marching_cubes"
required-features = ["marching_cubes", "gox"]

[[example]]
name = "voxel"
required-features = ["voxel", "gox"]

[[example]]
name = "texture"
required-features = ["png"]
