[package]
name = "gaiku-3d"
version = "0.1.0"
authors = ["Norman Paniagua <normanpaniagua@gmail.com>"]
edition = "2018"
description = "3d agnostic framework (game engine) terrain engine."
exclude = ["gaiku-3d/examples/*"]
keywords = ["3d", "terrain", "engine", "gaiku"]
categories = ["game-engines"]

readme = "Readme.md"
license = "MIT/Apache-2.0"

[dependencies]
gaiku-common = { path = "../gaiku-common", version = "0.1.0" }
gox = { git = "https://github.com/norman784/gox.git", rev  = "6db32e9ec10ad864b876c6f201a50de325c68669" }
png = "0.14.0"

[dev-dependencies]
obj-exporter = "0.2.0"
