[package]
name = "gaiku-3d"
version = "0.1.0"
authors = ["Norman Paniagua <normanpaniagua@gmail.com>"]
edition = "2018"
description = "3d agnostic framework (game engine) terrain engine."
exclude = ["gaiku-3d/examples/*"]
keywords = ["3d", "terrain", "engine", "gaiku"]
categories = ["game-engines"]

documentation = "https://docs.rs/gaiku-3d"
homepage = "https://github.com/norman784/gaiku"
repository = "https://github.com/norman784/gaiku"

readme = "Readme.md"
license = "MIT/Apache-2.0"

[features]
default = ["gox", "voxel"]
all  = ["heightmap", "marching-cubes", "voxel", "gox"]
heightmap = ["png"]
marching-cubes = ["glam"]
voxel = []
serde = ["gaiku-common/serialization"]

[dependencies]
gaiku-common = { path = "../gaiku-common", version = "^0.1.0" }
gox = { version = "^0.4.0", optional = true }
png = { version = "^0.16.7", optional = true }
glam = { version = "^0.11.3", features = ["mint"], optional = true }

[dev-dependencies]
criterion = "0.3"
obj-exporter = "0.2.0"

[[bench]]
name = "main"
harness = false
