[package]
name = "gaiku-bevy"
version = "0.1.0"
authors = ["norman784 <normanpaniagua@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_app = "0.4.0"
bevy_asset = "0.4.0"
bevy_ecs = "0.4.0"
bevy_math = "0.4.0"
bevy_pbr = "0.4.0"
bevy_render = "0.4.0"
bevy_scene = "0.4.0"
bevy_transform = "0.4.0"
bevy_utils = "0.4.0"
gaiku-3d = { path = "../gaiku-3d", version = "0.1.0", features=["all"] }
gaiku-common = { path = "../gaiku-common", version = "0.1.0" }
png = "0.16.8"

[dev-dependencies]
bevy = "0.4.0"
