[package]
name = "gaiku-common"
version = "0.1.0"
authors = ["Norman Paniagua <normanpaniagua@gmail.com>"]
edition = "2018"
description = "Common library used by gaiku"
license = "MIT/Apache-2.0"

documentation = "https://docs.rs/gaiku-common"
homepage = "https://github.com/norman784/gaiku"
repository = "https://github.com/norman784/gaiku"

[dependencies]
mint = "^0.5.6"
anyhow = "^1.0.37"