[package]
name = "gaiku-bevy"
version = "0.1.0"
authors = ["Norman Paniagua <normanpaniagua@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bevy = { git = "https://github.com/bevyengine/bevy", rev = "69aa9bf9fdc925d7325b79221706e9ff6c4b2bad" }
gaiku = { path = "../../" }

[[example]]
name = "main"
path = "examples/main.rs"
