[package]
name = "gaiku-bevy"
version = "0.1.0"
authors = ["Norman Paniagua <normanpaniagua@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bevy = "0.2"
gaiku = { path = "../../" }

[[example]]
name = "main"
path = "examples/main.rs"
