[package]
name = "gaiku-common"
version = "0.1.0"
authors = ["Norman Paniagua <normanpaniagua@gmail.com>"]
edition = "2018"
description = "Common library used by gaiku"
license = "MIT"

documentation = "https://docs.rs/gaiku-common"
homepage = "https://github.com/norman784/gaiku"
repository = "https://github.com/norman784/gaiku"

[dependencies]
anyhow = "1.0.32"
glam = "0.9.4"
