[package]
name = "gaiku_baker_voxel"
version = "0.1.0"
authors = ["Norman Paniagua <normanpaniagua@gmail.com>"]
edition = "2018"
description = "Adds Voxel mesh generation support to Gaiku"
keywords = ["3d", "terrain", "engine", "gaiku"]
categories = ["game-engines"]
license = "MIT/Apache-2.0"

documentation = "https://docs.rs/gaiku_baker_voxel"
homepage = "https://github.com/norman784/gaiku"
repository = "https://github.com/norman784/gaiku"

[dependencies]
gaiku_common = { path = "../gaiku_common", version = "^0.1.0" }
glam = { version = "^0.12.0 ", features = ["mint"] }

[[example]]
name = "table_gen_voxel"
path = "src/table_gen.rs"
test = false
bench = false

[dev-dependencies]
lazy_static = "1.4.0"
