[package]
name = "gaiku_common"
version = "0.1.0"
authors = ["Norman Paniagua <normanpaniagua@gmail.com>"]
edition = "2018"
description = "Common library used by Gaiku"
license = "MIT/Apache-2.0"

documentation = "https://docs.rs/gaiku_common"
homepage = "https://github.com/norman784/gaiku"
repository = "https://github.com/norman784/gaiku"

[features]
default = []
serialization = ["serde", "mint/serde"]
export = ["png"]

[dependencies]
anyhow = "^1.0.37"
mint = "^0.5.6"
png = { version = "^0.16.7", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }
rstar = "0.8.3"
glam = { version = "^0.12.0 ", features = ["mint"] }
thiserror = "1.0.26"
