[package]
name = "gaiku_format_png"
version = "0.1.0"
authors = ["Norman Paniagua <normanpaniagua@gmail.com>"]
edition = "2018"
description = "Adds PNG file format support to Gaiku"
keywords = ["3d", "terrain", "engine", "gaiku"]
categories = ["game-engines"]
license = "MIT/Apache-2.0"

documentation = "https://docs.rs/gaiku_baker_png"
homepage = "https://github.com/norman784/gaiku"
repository = "https://github.com/norman784/gaiku"

[dependencies]
gaiku_common = { path = "../gaiku_common", version = "^0.1.0" }
image = { version = "^0.23.12", features = ["png"]}
